getter 없애기, 도메인 테스트 보강
- 생성자 오버라이드, equalsTo, hashCode, toString 적극 사용
- jacoco 테스트 커버리지 확인하며 getter 없앰