@@ -2,39 +2,22 @@ package racing.domain;
 
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class Participants {
 
-  private List<Car> cars;
+  private final List<Car> cars;
 
   public Participants(List<Car> cars) {
     this.cars = cars;
   }
 
   public static Participants from(List<String> names) {
-    return new Participants(names.stream().map(Car::new).collect(Collectors.toList()));
+    return new Participants(names.stream().map(Car::new).toList());
   }
 
   public List<String> getWinnerNames() {
-    return findWinners(findMaxPosition());
-  }
-
-  private List<String> findWinners(Position maxPosition) {
-    List<String> winners = new ArrayList<>();
-    Collections.sort(cars);
-    for (Car car : cars) {
-      if (car.hasSamePosition(maxPosition)) {
-        winners.add(car.getName());
-      }
-    }
-    return winners;
-  }
-
-  private Position findMaxPosition() {
-    return Collections.max(cars, Comparator.comparing(Car::getPosition)).getPosition();
+    return findWinners(findMaxPositionCar());
   }
 
   public void play(MovementStrategy strategy) {
@@ -43,7 +26,26 @@ public class Participants {
     }
   }
 
-  public List<Car> getCars() {
-    return this.cars;
+  @Override
+  public String toString() {
+    String str = "";
+    for(Car car : this.cars) {
+      str += car.toString() + '\n';
+    }
+    return str;
+  }
+
+  private List<String> findWinners(Car maxPositionCar) {
+    List<String> winners = new ArrayList<>();
+    for (Car car : cars) {
+      if (car.hasSamePosition(maxPositionCar)) {
+        winners.add(car.getName());
+      }
+    }
+    return winners;
+  }
+
+  private Car findMaxPositionCar() {
+    return Collections.max(cars);
   }
 }
